--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.3.0",
+    "thunk": "0.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
